# lianwall-gui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LianWallSocket.md  README.md  TODO.md  build.sh
changelogs/: CHANGELOG-1.0.0.md  CHANGELOG-1.1.0.md  CHANGELOG-1.1.1.md  CHANGELOG-1.4.1.md  CHANGELOG-1.4.2.md
packaging/: lianwall-gui.desktop
qml/: Theme.qml  main.qml
qml/components/: CountdownBar.qml  NavBar.qml  SunflowerCanvas.qml  TagEditor.qml  TimelineTrack.qml  TimelineView.qml  WallpaperCard.qml  WallpaperGrid.qml  WallpaperPreview.qml
qml/dialogs/: ExitDialog.qml  FileOperationDialog.qml  FilterDialog.qml  WallpaperDetailDialog.qml
qml/pages/: AboutPage.qml  DashboardPage.qml  HomePage.qml  LibraryPage.qml  PlaceholderPage.qml  SettingsPage.qml  StatusPage.qml  TimelinePage.qml
resources/: resources.qrc
src/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h  Constants.h  DaemonClient.cpp  DaemonClient.h  DaemonState.cpp  DaemonState.h  DaemonTypes.h  LianwallClient.cpp  LianwallClient.h  ProcessManager.cpp  ProcessManager.h  ThumbnailCache.cpp  ThumbnailCache.h  ThumbnailProvider.cpp  ThumbnailProvider.h  TrayManager.cpp  TrayManager.h  WallpaperListModel.cpp  WallpaperListModel.h  main.cpp
src/models/: StatusModel.cpp  StatusModel.h  TimelineModel.cpp  TimelineModel.h  WallpaperModel.cpp  WallpaperModel.h
translations/: lianwall-gui_en.ts  lianwall-gui_zh_CN.ts
